<resources>
    <string name="app_name">RxJava2AndRetrofit2</string>


    <string name="first_page">首页</string>
    <string name="project">项目</string>
    <string name="square">广场</string>
    <string name="resource">资源</string>
    <string name="resource_center">资源中心</string>
    <string name="mine">我的</string>
    <string name="data_in_wrong_format">数据格式错误</string>
    <string name="request_was_aborted">请求失败</string>
    <string name="login">登录</string>
    <string name="network_sneak_off">网络开小差了</string>
    <string name="server_sneak_off">服务器开小差了</string>

    <string name="select_photos1">选择照片1</string>
    <string name="select_photos2">选择照片2</string>
    <string name="select_photos3">选择照片3（不传）</string>
    <string name="select_photos5">选择照片5</string>
    <string name="select_photos6">选择照片6</string>
    <string name="add_shop">添加店铺</string>

    <string name="register">注册</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_check_the_network_connection">请检查网络连接</string>
    <string name="jump_to_register">跳转到注册</string>

    <string name="first_page_details">首页详情</string>
    <string name="mine_details">我的详情</string>
    <string name="loading_failed">加载失败</string>
    <string name="no_data_available">暂无数据</string>

    <string name="all_resource">全部资源</string>
    <string name="all">全部</string>
    <string name="beautiful_woman">福利</string>
    <string name="android">Android</string>
    <string name="ios">IOS</string>
    <string name="video">视频</string>
    <string name="app">App</string>


    <string name="time">time</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="stop">stop</string>
    <string name="start_time">00:00:00</string>
    <string name="start_time2">00:00</string>


    <!--真正用于解析的属性-->
    <declare-styleable name="RCAttrs">
        <attr name="round_as_circle" format="boolean"/>
        <attr name="round_corner" format="integer"/>
        <attr name="round_corner_top_left" format="integer"/>
        <attr name="round_corner_top_right" format="integer"/>
        <attr name="round_corner_bottom_left" format="integer"/>
        <attr name="round_corner_bottom_right" format="integer"/>
        <attr name="stroke_color" format="color"/>
        <attr name="stroke_width" format="integer"/>
        <attr name="clip_background" format="boolean"/>
    </declare-styleable>


</resources>
