<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".java.login.ui.AddShopActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="100" />

    <TextView
        android:id="@+id/tev_select_photos1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_FFE066FF"
        android:gravity="center"
        android:text="@string/select_photos1"
        android:textColor="@color/color_FF198CFF"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <TextView
        android:id="@+id/tev_select_photos2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_FFE066FF"
        android:gravity="center"
        android:text="@string/select_photos2"
        android:textColor="@color/color_FF198CFF"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <TextView
        android:id="@+id/tev_select_photos3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_FFE066FF"
        android:gravity="center"
        android:text="@string/select_photos3"
        android:textColor="@color/color_FF198CFF"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <TextView
        android:id="@+id/tev_select_photos5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_FFE066FF"
        android:gravity="center"
        android:text="@string/select_photos5"
        android:textColor="@color/color_FF198CFF"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10" />

    <TextView
        android:id="@+id/tev_select_photos6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_FFE066FF"
        android:gravity="center"
        android:text="@string/select_photos6"
        android:textColor="@color/color_FF198CFF"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50" />

    <TextView
        android:id="@+id/tev_add_shop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:background="@color/color_FFE066FF"
        android:gravity="center"
        android:text="@string/add_shop"
        android:textColor="@color/color_FF198CFF"
        android:textSize="@dimen/sp_20" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="350" />

</LinearLayout>